deployment/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinitecareers
  labels:
    app.kubernetes.io/name: infinitecareers
    app.kubernetes.io/part-of: infinitecareers-platform
